删除安装文件

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -14,6 +14,7 @@ RUN set -ex \
     && apt-get install -y wget \
     && wget https://github.com/maxbube/mydumper/releases/download/v0.10.1/mydumper_0.10.1-2.$(env -i bash -c '. /etc/os-release; echo $VERSION_CODENAME')_amd64.deb \
     && dpkg -i mydumper_0.10.1-2.$(env -i bash -c '. /etc/os-release; echo $VERSION_CODENAME')_amd64.deb \
+    && rm -rf  mydumper_0.10.1-2.$(env -i bash -c '. /etc/os-release; echo $VERSION_CODENAME')_amd64.deb \
     && apt install -y libglib2.0-0 \
     && apt install -y libatomic1 \
     && ldd /usr/bin/mydumper \
